# piStatTracker

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  a_build.txt  a_configure.txt  build.txt  clientExample.txt  serverExample.txt
.github/workflows/: build.yml
core/: CMakeLists.txt
core/src/core/: base.h  config.h  log.cpp  log.h
core/src/core/Networking/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
networking/: CMakeLists.txt
networking/Networking/: dummy.cpp  net.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
reciever/: CMakeLists.txt
reciever/src/: config.h  main.cpp  main.h
sender/: CMakeLists.txt
sender/src/: main.cpp  main.h
sender/src/stats/: stat.h
statTest/: CMakeLists.txt
statTest/src/: main.cpp  main.h
statTest/src/stats/: stat.cpp
